--- a/Cusrim/Views/Student/Info.cshtml
+++ b/Cusrim/Views/Student/Info.cshtml
@@ -12,7 +12,7 @@
         <div class="text-center">
             <h5>SETUP PROFILE</h5>
         </div>
-        @using (Html.BeginForm("AuthenticateUser", "User", FormMethod.Post, new { @class = "" }))
+        @using (Html.BeginForm("Save", "Student", FormMethod.Post, new { @class = "" }))
 
         {
             <form class="">
@@ -58,29 +58,20 @@
 
                     <div>
                         <h3>About</h3>
-
                     </div>
                     <hr />
                     <div class="card-body">
-
-
                         <div class="row">
                             <div class="col-md-6 mb-3">
                                 <label for="firstName">Grade</label>
                                 @Html.TextBoxFor(m => m.Grade, new { @class = "form-control", placeholder = "Enter your CGPA", required = "required" })
-
                             </div>
-                          
                         </div>
-
-
-
                     </div>
                 </div>
 
                 <div class="checkbox mt-3 text-center">
-                    <button class="btn w-25 text-center btn-block bg_yellow align_center bg_cyan" type="submit">Register</button>
-                    @Html.ActionLink("Info", "Dashboard", "student")
+                    <button class="btn w-25 text-center btn-block bg_yellow align_center bg-success" type="submit">Register</button>
                 </div>
             </form>
 
