--- a/Cusrim/Views/Shared/_Layout.cshtml
+++ b/Cusrim/Views/Shared/_Layout.cshtml
@@ -15,18 +15,19 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-   
+
 
     <div class=" body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p> Copy right &copy;2020 All rights reserved| Made for students and supervisors</p>
-        </footer>
+       
     </div>
+
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <footer class="footer mt-auto py-3">
+        <p> Copy right &copy;2020 All rights reserved| Made for students and supervisors</p>
+    </footer>
 </body>
 </html>
